resources/css/app.css
@import 'tailwindcss';
@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@source '../../storage/framework/views/*.php';
@source '../**/*.blade.php';
@source '../**/*.js';

html.lenis,
html.lenis body {
  height: auto;
}

.lenis:not(.lenis-autoToggle).lenis-stopped {
  overflow: clip;
}

.lenis.lenis-smooth {
   scroll-behavior: auto;
}

.lenis [data-lenis-prevent],
.lenis [data-lenis-prevent-wheel],
.lenis [data-lenis-prevent-touch] {
  overscroll-behavior: contain;
}

.lenis.lenis-smooth iframe {
  pointer-events: none;
}

.lenis.lenis-autoToggle {
  transition-property: overflow;
  transition-duration: 1ms;
  transition-behavior: allow-discrete;
}

:root {
   --primary: #8A9A5B;
   --background: #F9F7F2;
   --background-1: #E3D4C4;
   --background-2: #D4DBD6;
   --background-3: #ECE5DD;
   --text: #4A4036;
   --accent: #C27A59;
}

@theme inline {
   --color-primary: var(--primary);
   --color-background: var(--background);
   --color-background-1: var(--background-1);
   --color-background-2: var(--background-2);
   --color-background-3: var(--background-3);
   --color-text: var(--text);
   --color-accent: var(--accent);

   --font-headings: 'Cormorant Garamond', serif;
   --font-body: 'Lato', sans-serif;
}

[data-barba="container"] {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   min-height: 100dvh;
   z-index: 1;
}

